--- a/스터디_2023/프로젝트/원더플레이스/css/style.scss
+++ b/스터디_2023/프로젝트/원더플레이스/css/style.scss
@@ -292,6 +292,13 @@ section{
     .wrap{
         padding:0 156px;
     }
+    .title_box{
+        display: flex;
+        h2{
+            display: block;
+        }
+        
+    }
 }
 .util{
     .sns{
